# gxe_ecs

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cpp.cpp
archetype_ecs/: archetype.hpp  ecs.hpp  idManager.cpp  idManager.hpp  system.hpp  types.hpp
archetype_ecs/systems/: physics.hpp
ecs/: archetype.hpp  componentMetaInfo.hpp  componentSignature.hpp  components.hpp  ecs.hpp  entity.hpp  entity.tpp  idManager.cpp  idManager.hpp  sparseSet.hpp  sparseSet.tpp  types.hpp
ecs/entities/: entity.hpp  entity.tpp  idManager.cpp  idManager.hpp  sparseSet.hpp  sparseSet.tpp
ecs/systems/: coreSystems.hpp  system.hpp  systemManager.hpp  systems.hpp
